ingress/sample-services.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-sample-service
  template:
    metadata:
      labels:
        app: ingress-sample-service
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sample-service
spec:
  selector:
    app: ingress-sample-service
  type: ClusterIP
  ports:
    - port: 9210
      targetPort: 80    

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-service-apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-sample-service-apache
  template:
    metadata:
      labels:
        app: ingress-sample-service-apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sample-service-apache
spec:
  selector:
    app: ingress-sample-service-apache
  type: ClusterIP
  ports:
    - port: 9220
      targetPort: 80
