ingress/ingress-resource-with-host.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com # curl -H 'Host:foo.bar.com'
    http:
      paths:
        - backend:
            serviceName: sample-service
            servicePort: 80
  - http:
      paths:
      - path: /nginx
        backend:
          serviceName: sample-service
          servicePort: 9210
      - path: /apache
        backend:
          serviceName: sample-service-apache
          servicePort: 9220
          
  - http:
      paths:
        - backend:
            serviceName: sample-service
            servicePort: 9210
